<resources>
    <string name="app_name">ArenaControl</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2743559009390249/7052744816</string>
    <string name="title_activity_server" translatable="false">ExampleCraft (1234)</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="serverActivity_name">"Name: "</string>
    <string name="serverActivity_info">INFO</string>
    <string name="serverActivity_players">PLAYERS</string>
    <string name="serverActivity_resources">RESOURCES</string>
    <string name="action_update">Update</string>
    <string name="action_remove">Remove</string>
    <string name="title_activity_server_add">Add server</string>
    <string name="addServerActivity_token">API token</string>
    <string name="addServerActivity_name">Name</string>
    <string name="save">Save</string>

    <string-array name="statusArray">
        <item>Server is off</item>
        <item>Working</item>
        <item>Starting…</item>
    </string-array>

    <string name="serverActivity_status">"Status: "</string>
    <string name="res_players">Players</string>
    <string name="res_cpu">CPU</string>
    <string name="res_ram">RAM</string>
    <string name="res_hdd">HDD</string>
    <string name="error">Error</string>
    <string name="title_activity_console">Console</string>
    <string name="IP" translatable="false">"IP: "</string>
    <string name="server_game">"Game: "</string>
    <string name="server_version">"Game version: "</string>
    <string name="server_plugins">"Plugins: "</string>
    <string name="server_id" translatable="false">"ID: "</string>
    <string name="serverRemoved">Server removed!</string>
    <string name="player_message">Message</string>
    <string name="player_kickByApp">Kicked by ArenaControl Android application</string>
    <string name="player_bannedByApp">You are banned by ArenaControl Android application!</string>
    <string name="player_kill">Kill</string>
    <string name="versionCode">Build #</string>
    <string name="version">"Version: "</string>
    <string name="about">About</string>
    <string name="rateApp">Rate this application</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="privacy">Privacy policy</string>
    <string name="send_logcat">Send logcat</string>
    <string name="onlyForDevelopers">This function only for developers! Logcat have your token! Click again…</string>
    <string name="goToGooglePlayQestion">Go to google Play?</string>
    <string name="addServerActivity_privacyText">By clicking on \"save\", I accept the privacy policy. (Refer to the \"About\" section).</string>
    <string name="res_start">Start</string>
    <string name="res_stop">Stop</string>
    <string name="res_reboot">Reboot</string>
    <string name="player_gamemode">Game mode</string>
    <string name="player_survival">Survival</string>
    <string name="player_creative">Creative</string>
    <string name="player_adventure">Adventure</string>
    <string name="player_observer">Observer</string>
    <string name="server_days">"Days before the end of lease: "</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="serverActivity_world">WORLD</string>
    <string name="world_time">Time</string>
    <string name="world_timeDay">Day</string>
    <string name="world_timeNight">Night</string>
    <string name="title_activity_server_command">Edit commands</string>
    <string name="action_clear">Clear local data</string>
    <string name="ads">ADs</string>
    <string name="world_weather">Weather</string>
    <string name="world_weather_clear">Clear</string>
    <string name="world_weather_rain">Rain</string>
    <string name="world_weather_thunder">Thunder</string>
    <string name="settings_general">General</string>

    <string-array name="settings_sort_servers_by">
        <item>Token</item>
        <item>ID</item>
        <item>Name</item>
    </string-array>
    <string name="settings_sortServersBy">Sort servers by</string>
    <string name="pref_ringtone_silent" translatable="false">12345</string>
    <string name="res_reload">Reload plugins</string>
    <string name="addServerActivity_scanQR">Scan QR code</string>
    <string name="addServerActivity_downloadQR_title">The QR code scanner is not installed!</string>
    <string name="addServerActivity_downloadQR_content">Do you want to install the QR code scanner from Google Play?</string>
    <string name="license">"License: "</string>
    <string name="license_button">View license</string>
    <string name="sourceCode">View source code</string>
    <string name="addServerActivity_howToAddServer">How to add a server?</string>
    <string name="addServerActivity_howToAddServer_content">1) Go to MyArena.ru\n2) Login in your acount\n3)Go to your game server\n4) Go to settings\n5) Go to API\n6) Copy the token to this application or scan QR code</string>
    <string name="world_whitelist">WhiteList</string>
    <string name="world_whitelist_off">off</string>
    <string name="world_whitelist_on">on</string>
    <string name="player_whitelist_add">Add</string>
    <string name="player_whitelist_remove">Remove</string>
    <string name="serverActivity_error">Invalid token or no network connection</string>
    <string name="noServers">No servers</string>
    <string name="settings_clear_command">Clear the command input field</string>
    <string name="pleaseWait">Please, wait…</string>
    <string name="incorrectToken">Incorrect token</string>
    <string name="commandEditActivity_newOrOldGamemode">Use new GameMode command (1.13+)</string>
    <string name="console_run">Run command</string>
    <string name="intendificatorReqest">Please provide access to your advertising ID</string>
    <string name="intendificatorMessage">This app is free, but it contains ads.\nDue to the fact that AdMob by default uses an advertising intensifier for advertising personalization, and Google Play requires the user\'s consent to use the advertising intensifier, you need either to allow access to the intensifier, or to refuse to use this application.\n\nPrivacy policy is available in the About window.</string>
    <string name="admob_appid" translatable="false">ca-app-pub-2743559009390249~5576011619</string>
    <string name="settings_auto_scroll_console">Auto scroll console to end</string>
</resources>
