<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.sccraft.arenacontrol.ServerActivity">
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="100"
        android:title="@string/action_update"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_commands"
        android:orderInCategory="101"
        android:title="@string/title_activity_server_command" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="102"
        android:title="@string/action_clear" />
    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="103"
        android:title="@string/action_remove"
        app:showAsAction="never" />
</menu>
