<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.sccraft.arenacontrol.PlayerActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/player_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_message" />

            <Button
                android:id="@+id/player_kick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kick"
                android:onClick="kick"/>

            <Button
                android:id="@+id/player_ban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ban"
                android:onClick="ban"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/player_op"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="OP"
                    android:onClick="op"/>

                <Button
                    android:id="@+id/player_deop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="deOP"
                    android:onClick="deOP"/>
            </LinearLayout>

            <Button
                android:id="@+id/player_kill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_kill"
                android:onClick="kill"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_gamemode"
                android:textAlignment="center"
                android:textSize="36sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_survival"
                android:onClick="gameMode_survival"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_creative"
                android:onClick="gameMode_creative"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_adventure"
                android:onClick="gameMode_gameMode_adventure"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_observer"
                android:onClick="gameMode_observer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_whitelist"
                android:textAlignment="center"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player_whitelist_add"
                    android:onClick="whitelistAdd"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player_whitelist_remove"
                    android:onClick="whitelistRemove"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
