<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.sccraft.arenacontrol.AddServerActivity">

    <EditText
        android:id="@+id/addServer_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addServerActivity_token"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-1dp" />

    <EditText
        android:id="@+id/addServer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addServer_token"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/addServerActivity_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/addServer_token"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/addServer_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addServer_name"
        android:layout_centerHorizontal="true"
        android:onClick="save"
        android:text="@string/save"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="91dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addServer_save"
        android:text="@string/addServerActivity_privacyText" />
</RelativeLayout>
