<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.sccraft.arenacontrol.CommandEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_time"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_timeDay" />

            <EditText
                android:id="@+id/editText_command_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="time set day" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_timeNight" />

            <EditText
                android:id="@+id/editText_command_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="time set night" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="set" />

            <EditText
                android:id="@+id/editText_command_timeSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="time set %time%" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="add" />

            <EditText
                android:id="@+id/editText_command_timeAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="time add %time%" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_weather"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="weather %weather%" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_gamemode"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/newGameMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commandEditActivity_newOrOldGamemode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_reload"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_reload_command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="reload" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
