<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.sccraft.arenacontrol.ServerActivity$ServerResFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Игроки-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/res_players_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/res_players" />

                <ProgressBar
                    android:id="@+id/res_players_pb"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:max="100"
                    android:minHeight="179dp"
                    android:progress="10" />
            </LinearLayout>

            <!--Процессор-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/res_cpu_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/res_cpu" />

                <ProgressBar
                    android:id="@+id/res_cpu_pb"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="10" />
            </LinearLayout>


            <!--ОЗУ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/res_ram_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/res_ram" />

                <ProgressBar
                    android:id="@+id/res_ram_pb"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="10" />
            </LinearLayout>

            <!--Диск-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/res_disk_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/res_hdd" />

                <ProgressBar
                    android:id="@+id/res_disk_pb"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="10" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/res_pleaseWait"/>

            <!--Включение / выключение / перезагрузка-->
            <Button
                android:id="@+id/res_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_start" />

            <Button
                android:id="@+id/res_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_stop" />

            <Button
                android:id="@+id/res_reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_reboot" />

            <Button
                android:id="@+id/res_reload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_reload" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>