<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.sccraft.arenacontrol.ServerActivity$ServerInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serverActivity_name" />

                <TextView
                    android:id="@+id/server_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ExampleCraft" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_id" />

                <TextView
                    android:id="@+id/server_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12345" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serverActivity_status" />

                <TextView
                    android:id="@+id/serverActivity_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Running" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IP" />

                <TextView
                    android:id="@+id/server_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="192.168.0.1:25565" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_game" />

                <TextView
                    android:id="@+id/server_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Minecraft" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_version" />

                <TextView
                    android:id="@+id/server_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.7.10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_plugins" />

                <TextView
                    android:id="@+id/server_plugins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="WorldEdit -1.0, WorldGuard-1.0, PermissionsEX-1.0, Essentials-1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
